--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Pet Medicine - Home</title>
+<title>Pet Medicine</title>
 <meta name="keywords" content="pet vaccinations, pet medical care, veterinary">
 <meta name="description" content="At Wisdom Pet Medicine, we strive to blend the best in traditional and alternative healing techniques to diagnose and treat companion animals, including dogs, cats, birds, reptiles, rodents, and fish.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,7 @@
     </header>
 
       <img src="img/jumbotron.jpg" alt="woman with dog on couch">
-      <h1>We treat your pets like our own</h1>
+      <h1>We treat your pets like our own pets</h1>
       <p>At Wisdom Pet Medicine, we strive to blend the best in traditional and alternative healing techniques to diagnose and treat companion animals.</p>
     
       <article>
